syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.shad862.kafkafob.admin.proto";
option java_outer_classname = "DescribeGroupProto";

//https://scalapb.github.io/docs/validation
//https://scalapb.github.io/docs/scala.js

service DescribeGroupsService {
  rpc DescribeGroups (DescribeGroupsRequest) returns (DescribeGroupsReply) {}
  rpc DescribeGroupsReplying (DescribeGroupsRequest) returns (stream DescribeGroupsReply) {}
}

message DescribeGroupsRequest {
  int64 limit = 1;
}

message DescribeGroupsReply {
  repeated ConsumerGroupDescriptor descriptors = 1;
}

message ConsumerGroupDescriptor {
  string groupId = 1;
  repeated MemberDescription members = 2;
}

message MemberDescription {
  string clientId = 1;
  string consumerId = 2;
  string host = 3;
}